force-app/main/default/objects/copado__User_Story__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <description>This field is created to fetch the CR number for the Release</description>
    <label>Change Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>