force-app/main/default/objects/copado__User_Story__c/fields/copado_Priority_c__c.field-meta.xml
<CustomField>
    <fullName>copado_Priority_c__c</fullName>
    <label>copado__Priority__c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Lowest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>