force-app/main/default/objects/copado__User_Story__c/fields/Copado_Story_URL__c.field-meta.xml
<CustomField>
    <fullName>Copado_Story_URL__c</fullName>
    <formula>&apos;https://globaldigitalacceleration.lightning.force.com/lightning/r/copado__User_Story__c/&apos; &amp; Id &amp; &apos;/view&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copado Story URL</label>
    <type>Text</type>
</CustomField>