force-app/main/default/objects/copado__User_Story__c/fields/Jira_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Jira_Additional_Notes__c</fullName>
    <description>This field will be used to map the Jira Additional notes field to Copado User story object.</description>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>