force-app/main/default/objects/copado__User_Story__c/fields/Jira_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Key__c</fullName>
    <description>Installed as part of Copado Connect Installation - 3.7.2023</description>
    <externalId>true</externalId>
    <label>Jira Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>