force-app/main/default/objects/copado__User_Story__c/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://themosaiccompany.atlassian.net/browse/&apos; + copadoccmint__JIRA_key__c, &apos;Jira URL&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jira Link</label>
    <type>Text</type>
</CustomField>