force-app/main/default/objects/copado__User_Story__c/validationRules/Pull_Reqeuest.validationRule-meta.xml
<ValidationRule>
    <fullName>Pull_Reqeuest</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( copado__Pull_Requests_Approved__c),
    OR(
         copado__Promote_Change__c,
         copado__Promote_and_Deploy__c 
    )
)</errorConditionFormula>
    <errorMessage>Pull Request must be approved before selecting Promote or Deploy.</errorMessage>
</ValidationRule>