force-app/main/default/objects/copado__User_Story__c/listViews/All_User_Stories.listView-meta.xml
<ListView>
    <fullName>All_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Release__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>copado__Last_Promotion_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All User Stories</label>
</ListView>