force-app/main/default/objects/copado__User_Story__c/listViews/CodeCoverage_SCA_Fix.listView-meta.xml
<ListView>
    <fullName>CodeCoverage_SCA_Fix</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>copado__Last_Promotion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Sprint__c</field>
        <operation>equals</operation>
        <value>CodeCoverage_SCA_Fix</value>
    </filters>
    <filters>
        <field>copado__Release__c</field>
        <operation>equals</operation>
        <value>CodeCoverage_SCA_Fix</value>
    </filters>
    <label>CodeCoverage_SCA_Fix</label>
</ListView>