force-app/main/default/objects/copado__User_Story__c/listViews/Copado_Bulk_Deployment.listView-meta.xml
<ListView>
    <fullName>Copado_Bulk_Deployment</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>copado__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Release__c</field>
        <operation>notEqual</operation>
        <value>ReleaseSIT_Mock_Deployment</value>
    </filters>
    <label>Copado_Bulk_Deployment</label>
</ListView>