force-app/main/default/objects/copado__User_Story__c/listViews/Freight_on_Quote_User_Stories.listView-meta.xml
<ListView>
    <fullName>Freight_on_Quote_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Developer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__User_Story_Title__c</field>
        <operation>contains</operation>
        <value>GAFQ</value>
    </filters>
    <label>Freight on Quote User Stories</label>
</ListView>