force-app/main/default/objects/copado__User_Story__c/listViews/HA2_Mosaic_Direct.listView-meta.xml
<ListView>
    <fullName>HA2_Mosaic_Direct</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>copado__Team__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Developer__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>Jira_Key__c</columns>
    <columns>copado__Has_Apex_Code__c</columns>
    <columns>copado__Sprint__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Developer__c</field>
        <operation>contains</operation>
        <value>Siddharth,Sugunakar,Humera,Hemant,Himanshu,Lohitha,Ajeet,Rohan,Vanshika,Krishan,Nikhilesh,Dishari,Raghu,Anjali,Manisha</value>
    </filters>
    <filters>
        <field>copado__Sprint__c</field>
        <operation>equals</operation>
        <value>Ha 2</value>
    </filters>
    <label>HA2  - Mosaic Direct</label>
</ListView>