force-app/main/default/objects/copado__User_Story__c/listViews/MDM_INITIAL_DEPLOY.listView-meta.xml
<ListView>
    <fullName>MDM_INITIAL_DEPLOY</fullName>
    <columns>NAME</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Is_Bundle__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Release__c</field>
        <operation>equals</operation>
        <value>MDM - Release - I - 03/25</value>
    </filters>
    <label>MDM-INITIAL-DEPLOY</label>
</ListView>